--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-.png filter=lfs diff=lfs merge=lfs -text
-.psd filter=lfs diff=lfs merge=lfs -text
-.psb filter=lfs diff=lfs merge=lfs -text
-.unitypackage filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.psb filter=lfs diff=lfs merge=lfs -text
+*.unitypackage filter=lfs diff=lfs merge=lfs -text
