--- a/00_Development/Project/.gitignore
+++ b/00_Development/Project/.gitignore
@@ -97,3 +97,5 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+00_Development/UILearning/.vsconfig
+00_Development/UILearning/Library/AnnotationManager
