--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.psb filter=lfs diff=lfs merge=lfs -text
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
